--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -752,15 +752,47 @@ I propose that new GDPs elements can be integrated with existing home repertoire
 
 Several of the observations in vignettes described above, especially those involving interpersonal guided participation, detail the interweaving of novel concepts and practices with existing repertoires. An example being the use of visual prototyping explored above and in more detail in appendix.prototyping.
 
+In the previous chapter I outlined this learning design as aligned more with a step-based approach than a design-build-test one.  As mentioned in Chapter 3, the process of examining video data also did not align with common design thinking stages as I initially thought might be the case.  The stages were instead fragmented and sometimes happened in parallel. In many interactions I observed improvisational approaches which incorporated ideation, planning, implementation and testing in space of a minute or so. If I had encouraged participants to follow prescribed design stages this may have restrict this flexibility in practice. This concern is echoed in research which critiques a similar, staged approach to creative writing in primary education using a writing cycle approach.  [@kuby_rhizomatic_2016]
 
-In the previous chapter I outlined this learning design as aligned more with a step-based approach than a design-build-test one.  As mentioned in Chapter 3, the process of examining video data also did not align with common design thinking stages as I initially thought might be the case. This section therefore describes a set of evolving and flexible design practices as a counterpoint to  design thinking stages.
+
+This section therefore describes a set of evolving and flexible design practices as a counterpoint to  design thinking stages. These practices includes emerging norms, DoL, and community behaviour.
 
 
-This includes emerging norms, DoL, and community behaviour.  
+<!-- MOVE TO CHAP 3?
+As explored in the literature review design stages as a conceptual design tool is common in CS education, e.g. Resnick's creative learning spiral [@resnick_all_2007, p. 2]. In data analysis I created a coding theme based on a design cycle framework: Ask / Imagine, Plan, Create, Test, Improve, Share. When coding I observed that naturalistic practice rarely matched the progression of the design cycle.  -->
 
-This section discusses some of the outcomes stemming from interventions and emergent participant responses in the area of peer and individual working practices.
 
-In Chapter 5, one of area of contractions was the dysfunctional group work which was freed up by allowing greater atomisation and greater scaffolding of tool use.
+**Observations and evidence on flexible design practice**
+
+As typified in vignette 1 and 5 , some younger participants in particular developed impressively fluid practice demonstrating extremely rapids shifts between code editing, game testing, authoring assets in online tools and migrating files often while talking with peers. Some older participants also showed rapid, responsive creativity. Grandad Clive quickly incorporated a boost to player health after a level after being given feedback during playtesting [EVIDENCE?].
+
+At other times design processes were experimental with no clear end goal. In exploring sound making software Ed and Mark start a process of tinkering and messing about with the capability of the tools which spurs creativity. The joint improvised process created two different soundtracks. This sparks a new proposal to incorporate different soundtracks for different levels. Pairs often adopted a similar spirit of improvisation. In V7 Dan(p) makes a suggestion - "Use paper to design?" - to which Toby(c) replies "I'm just going with it."
+
+**Lingua Franca return?:**
+The examples of this chapter show the importance of GDPS as a lingua franca to facilitate these kinds of flexible responsive collaboration.
+
+
+
+These observations of the value of flexible design processes, invite discussion on how best to conceptualise and support these flexible approaches. One potentially fruitful perspective is that ofrhizomatic design approaches [@de_freitas_classroom_2012]. Research exists on the promise of rhizomatic approaches design thinking in creative educational programmes [@biffi_chasing_2017-1]. However researchers identify significant competencies required including to "identify and synthesize the body of technical and even complex knowledge into a feasible structure" [@biffi_chasing_2017-1, p. 972], which are not well-aligned with the age group of this context.
+
+So instead of rhizomatic design, I propose that the tools, process and the community in this study mutually encourage an improvisational approach often referred to as _jamming_. While the processes identified are often improvised, there is a group element of the process where makers pick up techniques from other makers in the group. I suggest that such _jamming_ can be facilitated as a way of encouraging co-development of practices and making styles as proposed by Gutiérrez and Rogoff [@gutierrez_cultural_2003]
+
+Restrictions in creativity are important here. The restricted genre, pixel art format and templated approach act not only as technical  scaffolds but also aligns with research on the value of constraints in facilitating rapid creative improvisation in the areas of music and drama. The domains of programming, game jams and hackathons also use constraints in a similar way [@gabler2005prototype].
+
+Game Jams are accelerated events encouraging creative collaboration and innovation. While the event's premise is to promote collaboration, these events are inconsistent in their support and scaffolding of collaborative approaches [@goddard_playful_2014]. Game jams often prize innovation and originality. Recent research posits that Game Jams can be profitably used in formal education contexts [@aurava_game_2021], although there is scant guidance on how to address potentially problematic issues (list these). A complementary approach would be to significantly adapt the overall Game Jam format and to add greater scaffolding to the process as in the learning design of this research. Jamming in a musical context on the other hand takes place within an introduced but ideally familiar frame work. In musical terms this may be improvising around a familiar popular song, here it is adapting a template of a familiar game genre.
+
+WRAP UP SOMEHOW ?
+
+In the conclusing chapter I propose that this exploring these process can have value in other areas of digital making, and beyond.
+
+
+<!-- There are disparate resources available for game jams but due to the adult centric audience and mix of abilities they are less guided in nature than many supported design processes aimed at school age audiences. -->
+
+<!-- Within the concept of jamming, activity which is casual seemingly non-productive can still transmit useful information to guide collaborative practices. As per above and examples in Appedix ? Find. -->
+
+<!-- This section discusses some of the outcomes stemming from interventions and emergent participant responses in the area of peer and individual working practices. -->
+
+<!-- In Chapter 5, one of area of contractions was the dysfunctional group work which was freed up by allowing greater atomisation and greater scaffolding of tool use. -->
 
 <!-- Some barriers stemming from alienation from participant group working processes were resolved partly by freeing up some patterns of collaboration and interaction and removing others.
 
@@ -773,46 +805,25 @@ There is a flexibility here which is encouraged by informal moments of  playtest
 These tensions are mirrored in similar research and were highlighted in the practitioner interviews that I conducted.
  -->
 
-
-
-Chapter five outlined examples of GDPS being used as a lingua franca in playtesting sessions for a variety of collaborative work from feedback to direct requests for help from peers.
-
-ARE THERE ARE OTHER STUDIES WHICH ENCOURAGE THIS?
-
-#### Observations and evidence on flexible design practice
-
-Flexible design practices are often present in recorded data. Younger participants in particular developed impressively fluid practice demonstrating extremely rapids shifts between code editing, game testing, authoring assets in online tools and migrating files often while talking with peers. Older participants also showed rapid, responsive creativity. Clive quickly incorporated a boost to player health after a level after being given feedback during playtesting. In exploring sound making software Ed and Mark start a process of tinkering and messing about with the capability of the tools which spurs creativity. The joint jamming created two different soundtracks. This sparks a new proposal to incorporate different soundtracks for different levels. Pairs often adopted a similar spirit of improvisation. For example parent Dan makes a suggestion - "Use paper to design?" - to which Toby replies "I'm just going with it."
-
-
-**Describing Design Cycles as a design process for novices**
-
-As explored in the literature review design stages as a conceptual design tool is common in CS education, e.g. Resnick's creative learning spiral [@resnick_all_2007, p. 2]. While I did not ask learners to follow prescribed design stages, in data analysis I created a coding theme based on a design cycle framework: Ask / Imagine, Plan, Create, Test, Improve, Share. When coding I observed that naturalistic practice rarely matched the progression of the design cycle. The stages were instead fragmented and sometimes happened in parallel. In many interactions I observed improvisational approaches which incorporated ideation, planning, implementation and testing in space of a minute or so. If I had encouraged participants to follow prescribed design stages this may have restrict this flexibility in practice. This concern is echoed in research which critiques a similar, staged approach to creative writing in primary education using a writing cycle approach.  [@kuby_rhizomatic_2016]
-
-DROP THIS - NOT CLEAR IF NOT REALLY PROPOSED AS A NAVIGATIONAL STRATEGY FOR YOUNG PEOPLE.
-In a closer review of key literature claims of of the value for participants of following design cycles are implied but not supported. Instead stages is are proposed as a tool to "discusses strategies for designing new technologies" [@resnick_all_2007, p. 2]. The following writing discusses the value of flexible approach to design processes observed in my research.
-
-### Discussion on Flexible Design Practices
-
-While the concept of Game Jams are established, the free form flexibility of the Jam process is often left to the skills and evolving practices of the participants.
-
-This section explores the process of jamming in the context of game making. While the processes identified are often improvised, there is a group element of the process where makers pick up techniques from other makers in the group. I propose the value of facilitators noticing and nurturing potentially productive practices.
-
-I propose that this process can have value in other areas of digital making.
+<!-- DROP THIS - NOT CLEAR IF NOT REALLY PROPOSED AS A NAVIGATIONAL STRATEGY FOR YOUNG PEOPLE.
+In a closer review of key literature claims of of the value for participants of following design cycles are implied but not supported. Instead stages is are proposed as a tool to "discusses strategies for designing new technologies" [@resnick_all_2007, p. 2]. The following writing discusses the value of flexible approach to design processes observed in my research. -->
 
 
 
-#### The potential of emergent social and cultural activities
+
+#### The potential of open / creative spaces to facilitate emergent social and cultural activities in evolving idioculture - MOVE LATER/ JUST A SIGNPOST TO LATER - PARK, FOR NOW?
 
 **It is of value to create spaces to leverage the potential of in-between moments for participants - playtesting or non-productive**
 
 <!--
 Note Dropped Faff time.  -->
 
+<!-- SO IS THIS IN RELATION TO CHALLENGING DESIGN STAGE PARAGDIM
+I noted in analysis of data that along with frustration there are also moments of creativity, and there are bonding moments which appear to be helped by this activity which is at times quite unfocused but also shared.  -->
 
+To support the development of emerging practices I introduced, social missions, drama frame and concepts of maker types.
 
-
-SO IS THIS IN RELATION TO CHALLENGING DESIGN STAGE PARAGDIM
-I noted in analysis of data that along with frustration there are also moments of creativity, and there are bonding moments which appear to be helped by this activity which is at times quite unfocused but also shared. In retrospect, many of the social missions explored above encouraged activity outside of established design stages. For example the lively discussion about game playing in response to the mission to _find out the favourite games of 3 other people_.
+In retrospect, many of the social missions explored above encouraged activity outside of established design stages. For example the lively discussion about game playing in response to the mission to _find out the favourite games of 3 other people_.
 
 The process of swapping graphical assets used a shared Piskel gallery and games area which served to keep individuals informed in directly of progress being made, and to spark curiosity in the creations of others.
 
@@ -828,64 +839,13 @@ This a concept is developed later in this discussion.
 
 
 
-### Discussion in relation to other research
+<!-- ### Returning to the table of varied GDP use with supporting evidence
 
-#### - beyond design cycle stages
-
-These observations of the value of flexible design processes, invite discssion on how best to conceptualise and support these flexible approaches. Game Jams are accelerated events encouraging creative collaboration and innovation. While the event's premise is to promote collaboration, these events are inconsistent in their support and scaffolding of collaborative approaches [@goddard_playful_2014].
-
-Other relevant perspectives include rhizomatic design approaches  [@de_freitas_classroom_2012]. Research exists on the promise of rhizomatic approaches design thinking in creative educational programmes [@biffi_chasing_2017-1]. However researcher identify significant competencies required including to "identify and synthesize the body of technical and even complex knowledge into a feasible structure" [@biffi_chasing_2017-1, p. 972], which are not well-aligned with the age group of this context.
-
-However, in this context the link is imiled or ther eare otehr problems with framing as rhizomatic metaphor in terms of communicating the essence of the flexible approach beyond academic audience.  
-
-#### On Game Jamming
-
-So instead of rhizomatic design process, I propose that the tools, process and the community in this study mutually encourage an improvisational approach often referred to as jamming.
-
-NOTE - Explore jamming in relation to lit review concepts and data of the chapter.
-
-There are disparate resources available for game jams but due to the adult centric audience and mix of abilities they are less guided in nature than many supported design processes aimed at school age audiences.
-
-
-Recent research posits that Game Jams can be profitably used in formal education contexts [@aurava_game_2021], although there is scant guidance on how to address potentially problematic issues (list these). A complementary approach would be to significantly adapt the overall Game Jam format and to add greater scaffolding to the process as in the learning design of this research.
-
-Examples - move examples up?
-
-Within the concept of jamming, activity which is casual seemingly non-productive can still transmit useful information to guide collaborative practices. As per above and examples in Appedix ? Find.
-
-I propose that the concept of jamming can be introduced and supported as a way of encouraging co-development of practices and making styles as proposed by Gutiérrez and Rogoff [@gutierrez_cultural_2003]
-
-
-
-MOVED HERE.
-There is also evidence here that frictions involved in dealing with participant expectations of the genre and professionalism of the game they will create, are helped by the use of a templated game. Both in terms of the technical platform and the implied narrative and creative frame which scaffolds the initial creative process. This supports existing research on the value of constraints in facilitating rapid creative improvisation in the areas of music and drama. The domains of programming, game jams and hackathons also use constraints in a similar way [@gabler2005prototype].
-HOW TO EXTEND?
-
-
-### Implications for practitioners - MOVE LATER?
-<!--
-RETURNING TO WHAT IS FOUND IN THE DATA - A CELEBRATION OF THE CONCRETE - AND UTITILY OF THE MID - LEVEL APPROACH -->
-
-Returning to issues of inclusive approaches to pedagogy, the findings of this chapter resonates with Papert and Turkle's celebration of the process of concrete tinkering. They also suggest that it is potentially augmented, in terms of wider accessibility, with the use of design patterns as a germ cell concept. This approach is flexible and potentially responsive whilst still retaining a unifying pedagogical approach.
-
-In many of the outlined uses of GDPs in chapter we can see processes at play that help bridge shifts in goals between activity systems and navigation between one sub-goal and the next. Any other analysis on the part of the participant can wait until the process becomes more familiar.
-
-This approach is aligned to inductive research processes. Finding useful abstractions only after immersing ones-self in the detail. Previously abstract concepts or processes become concrete through familiarisation via direct use and indirect observations through community participation.
-
-
-### Returning to the table of varied GDP use with supporting evidence
-
-The introduction introduced the summary table. I now return with a greater focus on the scope of the claims of this research, implications for facilitators and how the findings link to the contents of the following chapter.
+The introduction introduced the summary table. I now return with a greater focus on the scope of the claims of this research, implications for facilitators and how the findings link to the contents of the following chapter. -->
 
 <!-- Instead the potential of this learning design is of most value.   -->
 
-INSERT SUMMARY TABLE FROM HERE -
-https://docs.google.com/document/d/1Ce2cYIYnFCd9GM8zRntBd7lrud-dMbbrtgEQMoGNRmE/edit
 
-
-**What are the limits of the claims of this research?**
-
-It is important to recall the purpose and limitation of these figures outlined in Chapter 4, that this is not designed to claim efficacy of the learning design or to be representative of an average participant (which would require follow up studies of different design).
 
 
 <!--
@@ -922,8 +882,25 @@ For example, the use of CT concepts in a framework, listed as part of the initia
 <!-- Participants are able to use the affordances of the existing learning design and add their own evolving practice to them as a way of expressing and building agency. -->
 
 <!-- **Practical** -->
+### Implications for practitioners - MOVE LATER?
+<!--
+RETURNING TO WHAT IS FOUND IN THE DATA - A CELEBRATION OF THE CONCRETE - AND UTITILY OF THE MID - LEVEL APPROACH -->
 
-The observations of this chapter show the advantages of GDP as an intermediate, relatable design framework, occupying a the space between too concrete to be repeated and too theoretical to be grasped by novice game makers. The use of GDP concepts can create a tangible link between concrete player experience and the affordances of a guided creative process. Learners use of GDP as relatable and flexible constructs that facilitate communication, sustaining engagement, planning and division of labour. On a cultural plane, using GDPs can aid the propagation of technical and social processes game making practices within an emerging community of learners. GDPs served both researchers and participants by _providing a common language_ to clarify first learner expression and researcher's analysis of gameplay experience. Gdps functioned as an _inspirational structured design tool_  The utility of a patterns and their collection as a form _intermediate-level knowledge_ by both researchers and participants  is shown in part by in a growing sense of mastery towards technical processes becoming second nature and the resulting ability to share them with family and other peer groups.
+Returning to issues of inclusive approaches to pedagogy, the findings of this chapter resonates with Papert and Turkle's celebration of the process of concrete tinkering. They also suggest that it is potentially augmented, in terms of wider accessibility, with the use of design patterns as a germ cell concept. This approach is flexible and potentially responsive whilst still retaining a unifying pedagogical approach.
+
+In many of the outlined uses of GDPs in chapter we can see processes at play that help bridge shifts in goals between activity systems and navigation between one sub-goal and the next. Any other analysis on the part of the participant can wait until the process becomes more familiar.
+
+This approach is aligned to inductive research processes. Finding useful abstractions only after immersing ones-self in the detail. Previously abstract concepts or processes become concrete through familiarisation via direct use and indirect observations through community participation.
+
+### Conclusion proper
+
+
+The observations of this chapter show the advantages of GDP as an intermediate, relatable design framework, occupying a the space between too concrete to be repeated and too theoretical to be grasped by novice game makers. The use of GDP concepts can create a tangible link between concrete player experience and the affordances of a guided creative process. Learners use of GDP as relatable and flexible constructs that facilitate communication, sustaining engagement, planning and division of labour. On a cultural plane, using GDPs can aid the propagation of technical and social processes game making practices within an emerging community of learners. GDPs served both researchers and participants by _providing a common language_ to clarify first learner expression and researcher's analysis of gameplay experience. GDPs functioned as an _inspirational structured design tool_ .
+
+<!-- **What are the limits of the claims of this research?** It is important to recall the purpose and limitation of these figures outlined in Chapter 4, that this is not designed to claim efficacy of the learning design or to be representative of an average participant (which would require follow up studies of different design). -->
+
+
+NEXT CHAPTER?  The utility of a patterns and their collection as a form _intermediate-level knowledge_ by both researchers and participants  is shown in part by in a growing sense of mastery towards technical processes becoming second nature and the resulting ability to share them with family and other peer groups.
 
 <!-- **Theoretical** -->
 On a theoretical plane, this chapter has outlined the evolving use of GDPs as a meditational strategy to develop coding repertoires that are often shared. CHAT frames diverse use of shared resources and concepts, in this case GDPs, as meditational strategies which can involved into repertoires of practice [@lecusay_telementoring_2015; @gutierrez_learning_2019-1]. These concepts and this framing of learning as participation in community repertoires, are explored in the next chapter in relation to participant agency using examples that extend beyond the use of GDPs to other cultural processes. While the development of agency has not been the primary focus of this chapter, the processes of community adaptation of GDP use can be directly linked to conceptions of transformative agency explored in Chapter 4. The next chapter explores cultural aspects in greater detail continuing to explore emergent agency in this research.
