--- a/_posts/thesis_chapters/tocs/2025-1-6-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-1-6-Gdps.md_toc.md
@@ -9,8 +9,9 @@
     -   [The role of GDPs in the personal appropriation of concepts and
         processes - ( Target
         1000)](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes---target-1000)
-        -   [The role of GDP used in emerging technical processes
-            (900)](#the-role-of-gdp-used-in-emerging-technical-processes-900)
+        -   [The interrelationship of GDPs and the development of
+            technical
+            processes](#the-interrelationship-of-gdps-and-the-development-of-technical-processes)
             -   [Link to next section](#link-to-next-section)
     -   [GDPs used in the process of guided participation (Target
         2500)](#gdps-used-in-the-process-of-guided-participation-target-2500)
@@ -31,32 +32,25 @@
             others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
         -   [GDPs facilitate the use of wider funds of knowledge and
             interest](#gdps-facilitate-the-use-of-wider-funds-of-knowledge-and-interest)
-            -   [Summary: Home Funds and RQs - MOVED FROM CH. 7 TO
-                6](#summary-home-funds-and-rqs---moved-from-ch.-7-to-6)
         -   [Evolution and propagation of GDPs concepts during
             playtesting](#evolution-and-propagation-of-gdps-concepts-during-playtesting)
     -   [Reduced discussion section](#reduced-discussion-section)
         -   [Intro in relation to mediation and
             repertoires](#intro-in-relation-to-mediation-and-repertoires)
-        -   [Observations on emerging flexible design practices (MORE ON
-            INTERPERSONAL
-            LEVEL)](#observations-on-emerging-flexible-design-practices-more-on-interpersonal-level)
-            -   [Observations and evidence on flexible design
-                practice](#observations-and-evidence-on-flexible-design-practice)
-        -   [Discussion on Flexible Design
-            Practices](#discussion-on-flexible-design-practices)
-            -   [The potential of emergent social and cultural
-                activities](#the-potential-of-emergent-social-and-cultural-activities)
-        -   [Discussion in relation to other
-            research](#discussion-in-relation-to-other-research)
-            -   [- beyond design cycle
-                stages](#beyond-design-cycle-stages)
-            -   [On Game Jamming](#on-game-jamming)
+        -   [Observations and analysis on interventions to aid
+            construction of repertoires of
+            practice](#observations-and-analysis-on-interventions-to-aid-construction-of-repertoires-of-practice)
+        -   [Observations on emerging design
+            practices](#observations-on-emerging-design-practices)
+            -   [The potential of open / creative spaces to facilitate
+                emergent social and cultural activities in evolving
+                idioculture - MOVE LATER/ JUST A SIGNPOST TO LATER -
+                PARK, FOR
+                NOW?](#the-potential-of-open-creative-spaces-to-facilitate-emergent-social-and-cultural-activities-in-evolving-idioculture---move-later-just-a-signpost-to-later---park-for-now)
+    -   [Conclusion](#conclusion)
         -   [Implications for practitioners - MOVE
             LATER?](#implications-for-practitioners---move-later)
-        -   [Returning to the table of varied GDP use with supporting
-            evidence](#returning-to-the-table-of-varied-gdp-use-with-supporting-evidence)
-    -   [Conclusion](#conclusion)
+        -   [Conclusion proper](#conclusion-proper)
     -   [MOVED FROM INTRODUCTION](#moved-from-introduction)
         -   [MOVED FROM GUIDED
             PARTICIPATION](#moved-from-guided-participation)
